2005-10-18 Pierrick LE GALL

	* bug 172 fixed: crash when changing password with an external
	users table. The same kind of correction was also made in
	picture.php and register.php.

2005-10-18 Pierrick LE GALL

	* bug 159 and 166 fixed: parameter "options" for mail() function
	disabled by default.

2005-10-18 chrisaga

	* display : smaller font-size and, as requested, fonts more like 1.4

	* bug 165 fixed : La largeur par défaut en PIXELS pas en Kb

2005-10-18 chrisaga

	* display : in group_list.tpl - wrong form class, mixed html tags, ...

	* display : suppress bullets in admin->synchronize and checkbox under select

	* display : set standard font size to 12pt

2005-10-17 Pierrick LE GALL

	* improvement: use new function get_language_filepath in about.php
	(complement of bug 168 correction)
	
2005-10-17 Pierrick LE GALL

	* bug 154 fixed: "Calendar category, too precise dates". Bug came
	from the bigger precision of creation_date and available_date in
	images tables. Need to retrieve only the year-month-day
	information.
	
2005-10-17 volcom

	* new: history details by month,day
	
2005-10-15 Pierrick LE GALL

	* modification: localized labels in Administration>Pictures>Caddie

	* translation: bug fixed on special categories title in French

	* translation: all help pages were translated in french

2005-10-09 Pierrick LE GALL

	* new: "quick start" section in Administration>General>Instructions
	
2005-10-08 Pierrick LE GALL

	* translation: new items related to configuration parameters
	gallery_title and gallery_description in GUI.

2005-10-08 Pierrick LE GALL

	* modification: configuration parameters gallery_title and
	gallery_description are GUI managed in
	Administration>Configuration>General

	* bug fixed: configuration parameters (use|show)_(exif|iptc) and
	authorize_remembering should have been deleted from config table
	some time ago.
	
2005-10-08 Pierrick LE GALL

	* new: mass virtual categories movement manager in